modified a little bit per received comment: 1. use <- instead of = 2. remove redundant line break 3. add more clarity for parameter description 4. add more details for @description 5. move the bib information to REFERENCES.bib under tern

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -51,3 +51,23 @@
   year      =  1980,
   language  = "en"
 }
+
+@ARTICLE{bland1986statistical,
+  title     = "Statistical methods for assessing agreement between two methods of clinical measurement",
+  author    = "Bland, J Martin and Altman, DouglasG",
+  abstract  = "In clinical measurement comparison of a new measurement technique
+              with an established one is often needed to see whether they agree
+              sufficiently for the new to replace the old. Such investigations
+              are often analysed inappropriately, notably by using correlation
+              coefficients. The use of correlation is misleading. An alternative
+              approach, based on graphical techniques and simple calculations,
+              is described, together with the relation between this analysis and
+              the assessment of repeatability.",
+  journal   = "The lancet",
+  publisher = "Elsevier",
+  volume    ="327",
+  number    ="8476",
+  pages     ="307--310",
+  year      ="1986",
+  language  = "en"
+}
