--- a/vignettes/tern.Rmd
+++ b/vignettes/tern.Rmd
@@ -46,7 +46,7 @@ The package provides a large range of functionality to create tables and graphs 
 - unique patients
 - exposure across patients
 - change from baseline for parameters
-- statistical model fits: `MMRM`, logistic regression, Cox regression, ...
+- statistical model fits: MMRM, logistic regression, Cox regression, ...
 - ...
 
 `rtables` tabulation helper functions:
