--- a/vignettes/tern.Rmd
+++ b/vignettes/tern.Rmd
@@ -23,10 +23,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Introduction to tern
-
----------
-
 This vignette shows the general purpose and syntax of the `tern` R package.
 The `tern` R package contains analytical functions for creating tables and graphs useful for clinical trials and other statistical analysis.
 The main focus is on the clinical trial reporting tables but the graphs related to the clinical trials are also valuable.
@@ -166,17 +162,17 @@ The first plot is a `ggplot2` object and the second plot is a `gTree` object, as
 The second plot has to be properly resized to get a clear and readable table content.
 
 The `tern` functions used for plot generation are mostly `g_` prefixed.
-All `tern` plot functions are listed on [the tern website functions reference](https://insightsengineering.github.io/tern/main/reference/index.html).
+All `tern` plot functions are listed on [the tern website functions reference](https://insightsengineering.github.io/tern/latest-tag/reference/index.html).
 
 ## Interactive Apps
 
 Most of `tern` outputs could be easily accommodated into `shiny` apps.
 We recommend applying `tern` outputs into `teal` apps.
-The [`teal` package](https://insightsengineering.github.io/teal/main/) is a shiny-based interactive exploration framework for analyzing data.
-`teal` shiny apps with `tern` outputs are available in the [`teal.modules.clinical` package](https://insightsengineering.github.io/teal.modules.clinical/main/).
+The [`teal` package](https://insightsengineering.github.io/teal/latest-tag/) is a shiny-based interactive exploration framework for analyzing data.
+`teal` shiny apps with `tern` outputs are available in the [`teal.modules.clinical` package](https://insightsengineering.github.io/teal.modules.clinical/latest-tag/).
 
 ## Summary
 
 In summary, `tern` contains many additional functions for creating tables, listing and graphs used in clinical trials and other statistical analyses. The design of the package gives users a lot of flexibility to meet the analysis needs in a regulatory or exploratory reporting context.
 
-**For more information please explore [the tern website](https://insightsengineering.github.io/tern/main/).**
+**For more information please explore [the tern website](https://insightsengineering.github.io/tern/latest-tag/).**
