--- a/vignettes/missing_values.Rmd
+++ b/vignettes/missing_values.Rmd
@@ -41,7 +41,7 @@ to demonstrate what happens when we try splitting the rows by this variable. To 
 
 ```{r}
 adsl <- tern_ex_adsl
-adsl$SEX <- as.character(adsl$SEX)
+adsl$SEX <- as.factor(adsl$SEX)
 
 vars <- c("AGE", "SEX", "RACE", "BMRKR1")
 var_labels <- c(
