--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,5 +1,16 @@
 % Encoding: UTF-8
 
+@article{Agresti1998,
+  author = {Agresti, Alan and Coull, Brent A.},
+  title = {Approximate is Better than "Exact" for Interval Estimation of Binomial Proportions},
+  journal = {The American Statistician},
+  volume = {52},
+  number = {2},
+  pages = {119--126},
+  year = {1998},
+  doi = {10.1080/00031305.1998.10480550}
+}
+
 @ARTICLE{Yan2010-jt,
   title     = "Stratified Wilson and Newcombe Confidence Intervals for Multiple
                Binomial Proportions",
@@ -70,4 +81,48 @@
   pages     ="307--310",
   year      ="1986",
   language  = "en"
+}
+
+@article{HauckAnderson1986,
+ author = {Walter W. Hauck and Sharon Anderson},
+ journal = {The American Statistician},
+ number = {4},
+ pages = {318--322},
+ title = {A Comparison of Large-Sample Confidence Interval Methods for the Difference of Two Binomial Probabilities},
+ urldate = {2025-12-08},
+ volume = {40},
+ year = {1986},
+ doi = {10.2307/2684618}
+}
+
+@article{Newcombe1998,
+author = {Newcombe, Robert G.},
+title = {Interval estimation for the difference between independent proportions: comparison of eleven methods},
+journal = {Statistics in Medicine},
+volume = {17},
+number = {8},
+pages = {873-890},
+doi = {10.1002/(SICI)1097-0258(19980430)17:8<873::AID-SIM779>3.0.CO;2-I},
+year = {1998}
+}
+
+@article{MantelHaenszel1959,
+  title = {Statistical aspects of the analysis of data from retrospective studies of disease},
+  author = {Mantel, N. and Haenszel, W.},
+  journal = {Journal of the National Cancer Institute},
+  volume = {22},
+  number = {4},
+  pages = {719--748},
+  year = {1959}
+}
+
+@article{Sato1989,
+  title = {On the variance estimator for the Mantel-Haenszel Risk Difference},
+  author = {Sato, Tosiya and Greenland, Sander and Robins, James M.},
+  journal = {Biometrics},
+  volume = {45},
+  number = {4},
+  pages = {1323--1324},
+  year = {1989},
+  url = {http://www.jstor.org/stable/2531784}
 }
