Add cmh_mn method for prop diff CI/SE

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -126,3 +126,14 @@ year = {1998}
   year = {1989},
   url = {http://www.jstor.org/stable/2531784}
 }
+
+@article{MiettinenNurminen1985,
+  title = {Comparative analysis of two rates},
+  author = {Miettinen, Olli S. and Nurminen, Matti},
+  journal = {Statistics in Medicine},
+  volume = {4},
+  number = {2},
+  pages = {213--226},
+  year = {1985},
+  doi = {10.1002/sim.4780040211}
+}
